--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-hello world
-
-wuyu
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+	</head>
+	<body>
+		<p>Hello World!</p>
+	</body>
+</html>
