--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 
 <head>
-
+	
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -68,7 +68,7 @@
 </head>
 
 <body class="home blog">
-
+<p>test</p>
 <div id="container-outer">
 
 	<div id="header-container">
